Bug 1627986 - Don't scroll when focusing the root for document navigation. r=hsivonen

This still scrolls back to the top when focusing a subdocument via the tab key
or such in a (same-origin) iframe... I've decided to preserve behavior there but
let me know if you just want me to add a root element check in
nsFocusManager::ScrollIntoView instead.

I don't think it matters much, it's an edge case and either way this is a
progression.

Differential Revision: https://phabricator.services.mozilla.com/D70540

--HG--
extra : moz-landing-system : lando